# cheshirecat-python-sdk

./: pyproject.toml  requirements.txt
api/: __init__.py  client.py  configuration.py
api/builders/: __init__.py  memory.py  settings_input.py  why.py
api/clients/: __init__.py  http_client.py
api/endpoints/: __init__.py  admins.py  auth_handler.py  base.py  embedder.py  file_manager.py  large_language_model.py  memory.py  message.py  plugins.py  rabbit_hole.py  settings.py  users.py
api/models/: dtos.py
api/models/api/: admins.py  factories.py  memories.py  messages.py  plugins.py  rabbitholes.py  settings.py  tokens.py  users.py
api/models/api/nested/: memories.py  plugins.py
cheshirecat_python_sdk/builders/: __init__.py  memory.py  why.py
cheshirecat_python_sdk/endpoints/: auth.py  base.py  conversation.py  file_manager.py  memory.py  message.py  rabbit_hole.py  users.py  utils.py
cheshirecat_python_sdk/models/: dtos.py
cheshirecat_python_sdk/models/api/: admins.py  conversations.py
